--- a/Resources/config/service/entity.yml
+++ b/Resources/config/service/entity.yml
@@ -1,3 +1,5 @@
 services:
     zimzim_constructionsite.entity.constructionsite:
         class: %zimzim_construction_site.constructionsite_class%
+    zimzim_constructionsite.entity.typeactionitem:
+        class: %zimzim_construction_site.typeactionitem_class%
