--- a/Resources/config/service/manager.yml
+++ b/Resources/config/service/manager.yml
@@ -1,6 +1,13 @@
 services:
+
     zimzim_construction_site_constructionsitemanager:
         class: "ZIMZIM\ConstructionSiteBundle\Doctrine\ConstructionSiteManager"
         arguments:
             - @doctrine.orm.entity_manager
             - @zimzim_constructionsite_configuration_constructionsite
+
+    zimzim_construction_site_typeactionitemmanager:
+        class: "ZIMZIM\ConstructionSiteBundle\Doctrine\TypeActionItemManager"
+        arguments:
+            - @doctrine.orm.entity_manager
+            - @zimzim_constructionsite_configuration_typeactionitem
