--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,7 @@
-zimzim_categoryproduct_itemhome:
+zimzim_constructionsitebundle_constructionsite:
     resource: "@ZIMZIMConstructionSiteBundle/Resources/config/routing/admin_constructionsite.yml"
     prefix:   /zimzim/constructionsite/
+
+zimzim_constructionsitebundle_typeactionitem:
+    resource: "@ZIMZIMConstructionSiteBundle/Resources/config/routing/admin_typeactionitem.yml"
+    prefix:   /zimzim/typeactionitem/
